--- a/data.html
+++ b/data.html
@@ -25,7 +25,7 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="temp.html">Max Temperature</a>
-            <a class="dropdown-item" href="humidity.html">Humidity</a>
+            <a class="dropdown-item" href="main.html">Humidity</a>
             <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
             <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
           </div>
@@ -46,10 +46,10 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="temp.html">Max Temperature</a>
-            <a class="dropdown-item" href="humidity.html">Humidity</a>
+            <a class="dropdown-item" href="main.html">Humidity</a>
             <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
             <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
-            <a class="dropdown-item" href="comparison.html">Comparison</a>
+            <a class="dropdown-item" href="comparisons.html">Comparison</a>
             <a class="dropdown-item" href="data.html">Data</a>
           </div>
         </li>
