--- a/comparisons.html
+++ b/comparisons.html
@@ -24,7 +24,7 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="temp.html">Max Temperature</a>
-            <a class="dropdown-item" href="humidity.html">Humidity</a>
+            <a class="dropdown-item" href="main.html">Humidity</a>
             <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
             <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
           </div>
@@ -48,7 +48,7 @@
             <a class="dropdown-item" href="main.html">Humidity</a>
             <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
             <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
-            <a class="dropdown-item" href="comparison.html">Comparison</a>
+            <a class="dropdown-item" href="comparisons.html">Comparison</a>
             <a class="dropdown-item" href="data.html">Data</a>
           </div>
         </li>
@@ -75,7 +75,7 @@
         <div class="col-md-6">
           <div class="box">
             <h2>vs Humidity</h2>
-            <a href="humidity.html"> <img src="humid.png" width="400" height="300" alt="Latitude v Humidity"
+            <a href="main.html"> <img src="humid.png" width="400" height="300" alt="Latitude v Humidity"
                 class="image"></a>
           </div>
         </div>
