--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
             </ul>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="temp.html">Max Temperature</a>
-                <a class="dropdown-item" href="humidity.html">Humidity</a>
+                <a class="dropdown-item" href="main.html">Humidity</a>
                 <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
                 <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
               </div>
@@ -84,7 +84,7 @@
         <h3><b> Visualizations</b></h3>
         <hr/>
         <a href="temp.html"> <img src="temp.png" width="150" height="125" alt="Latitude v Temp" ></a>
-        <a href="humidity.html"><img src="humid.png" width="150" height="125" alt="Latitude v Humidity" ></a>
+        <a href="main.html"><img src="humid.png" width="150" height="125" alt="Latitude v Humidity" ></a>
         <a href="cloudiness.html"><img src="cloudiness.png"  width="150" height="125" alt="Latitude v Cloudiness" ></a>
         <a href="wind_speed.html"><img src="wind_speed.png" width="150" height="125" alt="Latitude v Windspeed" ></a>
       </div>
