--- a/wind_speed.html
+++ b/wind_speed.html
@@ -30,7 +30,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="comparison.html">Comparison</a>
+          <a class="nav-link" href="comparisons.html">Comparison</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="data.html">Data</a>
@@ -48,7 +48,7 @@
             <a class="dropdown-item" href="main.html">Humidity</a>
             <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
             <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
-            <a class="dropdown-item" href="comparison.html">Comparison</a>
+            <a class="dropdown-item" href="comparisons.html">Comparison</a>
             <a class="dropdown-item" href="data.html">Data</a>
           </div>
         </li>
