final changes to code.
I hope. seems to be working locally now

--- a/cloudiness.html
+++ b/cloudiness.html
@@ -67,7 +67,7 @@
         <div class="box">
           <h1><b>Cloudiness</b></h1>
           <hr/>
-          <img src="cloudiness.png" width="500" height = "350" alt="Latitude v Cloudiness">
+          <img src="images.images.cloudiness.png" width="500" height = "350" alt="Latitude v Cloudiness">
           <p>There is no correlation between latitude and cloudiness. However, many cities appear to have either 0%, 20%, 40%, 80%, or 100% cloudiness.
               This phenomenon occurs regardless of hemisphere. 
         </div>
